--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.5",
     "tailwindcss-primeui": "^0.4.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
