--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
+                  "maximumWarning": "500mb",
                   "maximumError": "1MB"
                 },
                 {
