--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
+    "simple-keyboard": "^3.8.43",
+    "simple-keyboard-layouts": "^3.4.70",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.5",
     "tailwindcss-primeui": "^0.4.0",
