--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@primeng/themes": "^19.0.5",
     "@tailwindcss/postcss": "^4.0.5",
     "notyf": "^3.10.0",
+    "pdfmake": "^0.2.18",
     "postcss": "^8.5.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
