Patient Registration PDF

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@fortawesome/fontawesome-free": "^5.10.2",
     "@primeng/themes": "^19.0.5",
     "@tailwindcss/postcss": "^4.0.5",
+    "jspdf": "^3.0.1",
     "notyf": "^3.10.0",
-    "pdfmake": "^0.2.18",
     "postcss": "^8.5.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
